css/styles_admin.css
@font-face {
    font-family: avenir-black;
    src: url('fonts/avenir-black-webfont.woff');
}

@font-face {
    font-family: avenir-light;
    src: url('fonts/avenir-light-webfont.woff');
}

@font-face {
    font-family: avenir-medium;
    src: url('fonts/avenir-medium-webfont.woff');
}

@font-face {
    font-family: avenir-roman;
    src: url('fonts/avenir-roman-webfont.woff');
}

html, body {
    font-family: avenir-medium;
}

.avenir-black {
    font-family: avenir-black;
}

.avenir-light {
    font-family: avenir-light;
}

.avenir-medium {
    font-family: avenir-medium;
}

.avenir-roman {
    font-family: avenir-roman;
}

.active {
    color: #ff386a;
}

.online {
    color: #00f468;
}

.logo {
    background: -moz-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* ff3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 182, 0, 1)), color-stop(100%, rgba(255, 56, 106, 1)));
    /* safari4+,chrome */
    background: -webkit-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* safari5.1+,chrome10+ */
    background: -o-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* opera 11.10+ */
    background: -ms-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* ie10+ */
    background: linear-gradient(90deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
}

a {
    color: #ff386a;
}

a:hover {
    color: #ffb600;
}

.logo img {
    height: 2.5em;
}


/*
.sidebar-menu {
    margin-top: 2.5em;
}*/

.user-panel {
    text-align: center;
    vertical-align: middle;
    height: 5em
}

.user-panel>.info>p {
    text-transform: capitalize;
    font-family: avenir-medium;
}

.sidebar-menu .sidebar-svg {
    vertical-align: middle;
    height: 2em;
}

.sidebar-menu .treeview.active > a > .sidebar-svg *,
.sidebar-menu .treeview-menu > li.active > a > .sidebar-svg * {
    fill: #ff386a;
}

ul.sidebar-menu span {
    color: #ffb600;
    font-size: 10pt;
    text-transform: uppercase;
    font-family: avenir-black;
    vertical-align: middle;
}

ul.sidebar-menu a {
    color: #ffb600;
}

ul.sidebar-menu .treeview.active > a,
ul.sidebar-menu .treeview.active > a > span {
    color: #ff386a;
}

/*ul.sidebar-menu .treeview.active > a > span {
    color: #ff386a;
}*/

.sidebar-menu .treeview-menu li a {
    font-family: avenir-medium;
}

.sidebar-mini.sidebar-collapse .sidebar-menu .treeview-menu {
    background: white;
    min-width: 16em !important;
}

.sidebar-menu .treeview-menu li.active a {
    color: #ff386a;
}

.sidebar-mini.sidebar-collapse .sidebar-menu > li:hover > .treeview-menu {
    top: 5px;
    margin-left: 0;
}

div.wrapper li.dropdown.user.user-menu.avenir-medium.ng-scope>a>span {
    text-transform: capitalize;
    font-family: avenir-black;
}

footer, footer a {
    /*> div,
footer > span,
footer > span > a {*/
    color: #6d6e70 !important;
    font-size: 9pt;
}

.btn {
    font-family: avenir-medium;
    font-size: 9pt;
    text-transform: uppercase;
    background-color: #FFFFFF;
    border-color: #ffb600;
    color: #ffb600;
}

.btn:hover {
    border-color: #ff386a;
    background-color: #FFFFFF;
    color: #ff386a;
}

.btn-primary, .btn-default {
    font-family: avenir-medium;
    font-size: 9pt;
    text-transform: uppercase;
    background-color: #FFFFFF;
    border-color: #ffb600;
    color: #ffb600;
}

.btn-primary:active, .btn-primary:focus, .btn-primary:active:focus, .btn-primary.hover, .btn-default:active, .btn-default:focus, .btn-default:active:focus, .btn-default.hover {
    background-color: #ff386a !important;
    border-color: #ff386a;
    color: #ffffff;
}


/* Headers of each category */

h3 {
    font-family: avenir-black;
    text-transform: uppercase;
    color: #6d6e70;
    font-size: 12pt;
}

.form-group>label {
    font-size: 11pt;
    color: #6d6e70;
    font-family: avenir-medium;
}

.form-group>div>input {
    font-size: 11pt;
    color: #6d6e70;
    font-family: avenir-roman;
}

div.form-group div.has-error input {
    border-color: #ff386a;
}

div.form-group div.has-error p {
    color: #ff386a;
}

.table {
    font-size: 11pt;
}

.table th {
    //text-transform: uppercase;
}

.icon-menu {
    width: 2em;
}

.sidebar-toggle {
    color: #ff386a !important;
    font-size: 11pt;
}

.sidebar-toggle:hover {
    color: #ffb600 !important;
}

.spinner {
    width: 100% !important;
    height: 100% !important;
}

.spinner:before {
    background-color: rgba(255, 255, 255, 0.7);
    top: -50%;
    left: -50%;
    border-radius: 5px;
    width: 100%;
    height: 100%;
    position: relative;
    display: block;
    content: "";
}

.box {
    border: 0;
}

.chat {
    padding: 3em 1em 1em 0em !important;
    height: 480px;
    overflow: auto;
}

#chat-box .item {
    height: 50px;
}

.box-header {
    padding: 1em;
}

.box-header .box-title {
    line-height: 2 !important;
    padding: 0 1em;
    font-family: avenir-black, sans-serif;
    color: #FF386a;
}

.box-header .box-tools {
    padding: .7em;
}

.box-body {
    padding: 1em 1em 1em 2em !important;
}

.table-btn .btn:first-child {
    margin-right: 1.5em;
}

.table-btn .btn:last-child {
    margin-left: 1.5em;
}

.detail-bold {
    font-weight: bold;
}

#iframeDiv {
    height: 480px;
    width: 100%;
    border: 0;
}

.selectize-input>* {
    display: block;
}

.category-image svg {
    width: 80px;
    height: 80px;
}

.steps li.active a, .steps li.active p {
    /*background: #ff386a;*/
    background: white;
    border: 3px solid #ff386a;
    opacity: 1;
    color: #ff386a;
}

.steps li.active a:after, .steps li.active p:after {
    border-left: 12px solid #ff386a;
}

.steps li a, .steps li p {
    /*background-color: #ff386a;*/
    background-color: white;
    border: 3px solid #FFb600;
    /*opacity: .4;*/
    color: #FFb600;
}

.steps li a:before, .steps li p:before {
    /*border-left: 0;*/
}

.file-upload {
    background-color: white;
    border: 2px solid #777777;
    /*opacity: .4;*/
    color: #777777;
}

.login-box {
    box-shadow: 0px 0px 5px 0px #FF386a;
    background-color: white;
}

.bg-split {
    background-color: #013A6B;
    background: -webkit-linear-gradient(120deg, #f9f9f9 50%, #f2f2f2 50%);
    /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(120deg, #f9f9f9 50%, #f2f2f2 50%);
    /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(120deg, #f9f9f9 50%, #f2f2f2 50%);
    /* For Firefox 3.6 to 15 */
    /*background: linear-gradient(120deg, #f9f9f9 50%, #f2f2f2 50%);*/
    /* Standard syntax */
    /*min-height: 100%;*/
    position: fixed;
    top: 0px;
    bottom: 0px;
    right: 0px;
    left: 0px;
}

div.panel-heading {
    background: -moz-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* ff3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 182, 0, 1)), color-stop(100%, rgba(255, 56, 106, 1)));
    /* safari4+,chrome */
    background: -webkit-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* safari5.1+,chrome10+ */
    background: -o-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* opera 11.10+ */
    background: -ms-linear-gradient(0deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /* ie10+ */
    background: linear-gradient(90deg, rgba(255, 182, 0, 1) 0%, rgba(255, 56, 106, 1) 100%);
    /*background-color: #ff386a !important;*/
    color: white !important;
}

.add-image-button {
    background-color: #ff386a;
}

.searchList .row {
    margin-left: 0;
    margin-right: 0;
}

.searchList .searchButton {
    padding-top: 1.7em;
}

#mimetype_select .selectize-control .selectize-input>* {
    display: inline-block;
}

.alertify-button-cancel, .alertify-button-cancel:active {
    background-color: #FFFFFF;
    border-color: #ffb600;
    color: #ffb600;
}

.alertify-button-cancel:hover, .alertify-button-cancel:focus {
    border-color: #ff386a;
    background-color: #FFFFFF;
    color: #ff386a;
}

.alertify-button-ok, .alertify-button-ok:hover, .alertify-button-ok:focus, .alertify-button-ok:active {
    background-color: #ff386a !important;
    border-color: #ff386a;
    color: #ffffff;
}

.btn-activate {
    width: 100px;
}

.content-wrapper .inner h3 {
    color: #777;
}

.form-control:focus {
    border-color: #ffb600;
}

.label-primary {
    background-color: #FF386a !important;
}


/* SELECTIZE STYLE*/

.selectize-input {
    border-radius: 0;
    box-shadow: none;
    border-color: #d2d6de;
    font-size: 14px;
}

.selectize-input:focus {
    border-color: #ffb600;
    box-shadow: none;
}

.selectize-input.focus {
    border-color: #ffb600;
    box-shadow: none;
}

.selectize-input::-moz-placeholder, .selectize-input:-ms-input-placeholder, .selectize-input::-webkit-input-placeholder {
    color: #bbb;
    opacity: 1;
}

.selectize-input:not(select) {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}


/* ./ SELECTIZE STYLE*/

.btn-primary.disabled.focus, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled].focus, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover {
    border-color: #ffb600;
    background-color: #ffb600;
}

.pagination>.active>a {
    background-color: #FF386a;
    border-color: #FF386a;
}

.pagination>li>a {
    color: #FF386a;
}

.pagination>.active>a:focus, .pagination>.active>a:hover {
    background-color: #FFb600;
    border-color: #FFb600;
}

.modal-dialog {
    width: 1000px;
}

.sidebar {
    min-height: 1000px;
    overflow-y: auto;
}

.box-footer a {
    margin-right: 10px;
}

.label-default {
    background-color: #9A9A9A;
    color: white;
}

.bg-primary {
    background-color: #FF386a;
}

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    .sidebar-menu .sidebar-svg {
        margin-left: -6em !important;
        margin-right: -6em !important;
    }
    .sidebar-collapse .sidebar-menu .sidebar-svg {
        margin-left: 0 !important;
        margin-right: -12em !important;
    }
    .sidebar-collapse .sidebar-menu .treeview-menu .sidebar-svg {
        margin-right: -6em !important;
        margin-left: -6em !important
    }
}

